Enhance UI and add database viewer functionality

--- a/public/index.html
+++ b/public/index.html
@@ -1,77 +1,105 @@
 <!DOCTYPE html>
-     <html lang="en">
-     <head>
-         <meta charset="UTF-8">
-         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-         <title>Die Mold FMS Mobile</title>
-         <script src="https://cdn.tailwindcss.com"></script>
-         <style>
-             body {
-                 font-size: 16px;
-                 touch-action: manipulation;
-             }
-             button {
-                 -webkit-tap-highlight-color: transparent;
-             }
-             input, select {
-                 min-height: 44px;
-             }
-         </style>
-     </head>
-     <body class="bg-gray-100 font-sans">
-         <div class="container mx-auto p-4 max-w-md">
-             <h1 class="text-2xl font-bold text-center mb-6">Die Mold FMS Mobile</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Die Mold FMS Mobile</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        body {
+            font-size: 16px;
+            touch-action: manipulation;
+            margin: 0;
+        }
+        button {
+            -webkit-tap-highlight-color: transparent;
+        }
+        input, select {
+            min-height: 44px;
+        }
+        .header {
+            background: linear-gradient(to right, #1e3a8a, #3b82f6);
+        }
+        .card {
+            transition: transform 0.2s;
+        }
+        .card:hover {
+            transform: translateY(-2px);
+        }
+    </style>
+</head>
+<body class="bg-gray-100 font-sans">
+    <!-- Fixed Header -->
+    <header class="header text-white p-4 shadow-lg fixed top-0 w-full z-10">
+        <h1 class="text-xl font-bold text-center">Die Mold FMS</h1>
+    </header>
 
-             <div class="mb-4">
-                 <label for="userRole" class="block text-sm font-medium text-gray-700">Select Role:</label>
-                 <select id="userRole" class="mt-1 block w-full p-3 border rounded-md" onchange="toggleManagerFeatures()">
-                     <option value="employee">Employee</option>
-                     <option value="manager">Manager</option>
-                 </select>
-             </div>
+    <!-- Main Content -->
+    <div class="container mx-auto p-4 max-w-md mt-16">
+        <!-- Role Selection -->
+        <div class="mb-4">
+            <label for="userRole" class="block text-sm font-medium text-gray-700">Select Role:</label>
+            <select id="userRole" class="mt-1 block w-full p-3 border rounded-lg shadow-sm focus:ring-2 focus:ring-blue-500" onchange="toggleManagerFeatures()">
+                <option value="employee">Employee</option>
+                <option value="manager">Manager</option>
+            </select>
+        </div>
 
-             <div id="initFMS" class="mb-4 hidden">
-                 <button onclick="initializeFMS()" class="w-full bg-blue-500 text-white p-3 rounded-md hover:bg-blue-600">Initialize Die Mold FMS</button>
-             </div>
+        <!-- Initialize FMS Button -->
+        <div id="initFMS" class="mb-4 hidden">
+            <button onclick="initializeFMS()" class="w-full bg-blue-600 text-white p-3 rounded-lg shadow-md hover:bg-blue-700">Initialize Die Mold FMS</button>
+        </div>
 
-             <div id="addTaskForm" class="mb-6 hidden bg-white p-4 rounded-lg shadow-md">
-                 <h2 class="text-lg font-semibold mb-4">Add New Task</h2>
-                 <div class="space-y-3">
-                     <input id="taskOrderId" type="text" placeholder="Order ID" class="w-full p-3 border rounded-md" required>
-                     <input id="taskToolName" type="text" placeholder="Tool/Item Name" class="w-full p-3 border rounded-md" required>
-                     <input id="taskRequestedBy" type="text" placeholder="Requested By" class="w-full p-3 border rounded-md" required>
-                     <select id="taskPriority" class="w-full p-3 border rounded-md">
-                         <option value="Low">Low</option>
-                         <option value="Medium">Medium</option>
-                         <option value="High">High</option>
-                         <option value="Urgent">Urgent</option>
-                     </select>
-                     <input id="taskRequiredBy" type="date" class="w-full p-3 border rounded-md" required>
-                     <div id="stepPlannedDates" class="space-y-2"></div>
-                     <button onclick="addTask()" class="w-full bg-blue-500 text-white p-3 rounded-md hover:bg-blue-600">Add Task</button>
-                 </div>
-             </div>
+        <!-- Add Task Form -->
+        <div id="addTaskForm" class="mb-6 hidden bg-white p-6 rounded-lg shadow-lg">
+            <h2 class="text-lg font-semibold mb-4 text-gray-800">Add New Task</h2>
+            <div class="space-y-4">
+                <input id="taskOrderId" type="text" placeholder="Order ID" class="w-full p-3 border rounded-lg shadow-sm focus:ring-2 focus:ring-blue-500" required>
+                <input id="taskToolName" type="text" placeholder="Tool/Item Name" class="w-full p-3 border rounded-lg shadow-sm focus:ring-2 focus:ring-blue-500" required>
+                <input id="taskRequestedBy" type="text" placeholder="Requested By" class="w-full p-3 border rounded-lg shadow-sm focus:ring-2 focus:ring-blue-500" required>
+                <select id="taskPriority" class="w-full p-3 border rounded-lg shadow-sm focus:ring-2 focus:ring-blue-500">
+                    <option value="Low">Low</option>
+                    <option value="Medium">Medium</option>
+                    <option value="High">High</option>
+                    <option value="Urgent">Urgent</option>
+                </select>
+                <input id="taskRequiredBy" type="date" class="w-full p-3 border rounded-lg shadow-sm focus:ring-2 focus:ring-blue-500" required>
+                <div id="stepPlannedDates" class="space-y-3"></div>
+                <button onclick="addTask()" class="w-full bg-blue-600 text-white p-3 rounded-lg shadow-md hover:bg-blue-700">Add Task</button>
+            </div>
+        </div>
 
-             <div class="mb-4">
-                 <button onclick="checkDelayAlerts()" class="w-full bg-yellow-500 text-white p-3 rounded-md hover:bg-yellow-600">Check Delay Alerts</button>
-             </div>
+        <!-- Check Delay Alerts -->
+        <div class="mb-4">
+            <button onclick="checkDelayAlerts()" class="w-full bg-yellow-500 text-white p-3 rounded-lg shadow-md hover:bg-yellow-600">Check Delay Alerts</button>
+        </div>
 
-             <div class="mb-6">
-                 <h2 class="text-lg font-semibold mb-4">Pending Tasks (<span id="pendingCount">0</span>)</h2>
-                 <div id="pendingTasks" class="space-y-4"></div>
-             </div>
+        <!-- Pending Tasks -->
+        <div class="mb-6">
+            <h2 class="text-lg font-semibold mb-4 text-gray-800">Pending Tasks (<span id="pendingCount">0</span>)</h2>
+            <div id="pendingTasks" class="space-y-4"></div>
+        </div>
 
-             <div class="mb-6">
-                 <h2 class="text-lg font-semibold mb-4">Top 5 Priority Tasks</h2>
-                 <div id="priorityTasks" class="space-y-4"></div>
-             </div>
+        <!-- Top 5 Priority Tasks -->
+        <div class="mb-6">
+            <h2 class="text-lg font-semibold mb-4 text-gray-800">Top 5 Priority Tasks</h2>
+            <div id="priorityTasks" class="space-y-4"></div>
+        </div>
 
-             <div>
-                 <h2 class="text-lg font-semibold mb-4">Email Log</h2>
-                 <div id="emailLog" class="bg-white p-4 rounded-lg shadow-md overflow-x-auto"></div>
-             </div>
-         </div>
+        <!-- Email Log -->
+        <div class="mb-6">
+            <h2 class="text-lg font-semibold mb-4 text-gray-800">Email Log</h2>
+            <div id="emailLog" class="bg-white p-4 rounded-lg shadow-lg overflow-x-auto"></div>
+        </div>
 
-         <script src="script.js"></script>
-     </body>
-     </html>
+        <!-- Database Viewer -->
+        <div>
+            <h2 class="text-lg font-semibold mb-4 text-gray-800">Database Viewer</h2>
+            <button onclick="viewDatabase()" class="w-full bg-green-500 text-white p-3 rounded-lg shadow-md hover:bg-green-600 mb-4">View Database Data</button>
+            <div id="databaseViewer" class="bg-white p-4 rounded-lg shadow-lg"></div>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
